Adding data and project proposal

--- a/README
+++ b/README
@@ -1,13 +1,8 @@
-Proposal Thoughts
----------------------------
-  Project Idea  - To analyse the correlation of different health and societal makeup measurements across the world's largest countries with average lifespan to see which have the strongest impact.
-Some specific potential measurements include:
-  Sex, Obesity, Malnourishment, and National Population
-Team members and their roles
-  Caleb Wolf -
-  Kyle Burks-
-  Chavell Scott-
-  Simone Allen-
-Potential data sources
-  Kaggle
-  https://www.kaggle.com/datasets/theworldbank/health-nutrition-and-population-statistics
+Project 1
+----------------------------
+
+Raw data from:
+https://www.kaggle.com/datasets/theworldbank/health-nutrition-and-population-statistics
+
+
+----------------------------
