Urban dataframe sorted

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -698,101 +698,18 @@
        "      <th>0</th>\n",
        "      <td>Bangladesh</td>\n",
        "      <td>Mortality rate, adult, female (per 1,000 femal...</td>\n",
-       "      <td>1.209193e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Mortality rate, adult, male (per 1,000 male ad...</td>\n",
-       "      <td>1.590966e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Physicians (per 1,000 people)</td>\n",
-       "      <td>3.137500e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Population, female</td>\n",
-       "      <td>7.543719e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Population, male</td>\n",
-       "      <td>7.727287e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>Mortality Rate, Total</td>\n",
-       "      <td>3.672831e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>Mortality Rate, Total</td>\n",
-       "      <td>2.351280e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>Nigeria</td>\n",
-       "      <td>Mortality Rate, Total</td>\n",
-       "      <td>7.508534e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>Mortality Rate, Total</td>\n",
-       "      <td>3.392261e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>Mortality Rate, Total</td>\n",
-       "      <td>2.134100e+02</td>\n",
+       "      <td>120.919333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>108 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Country Name                                     Indicator Name  \\\n",
-       "0       Bangladesh  Mortality rate, adult, female (per 1,000 femal...   \n",
-       "1       Bangladesh  Mortality rate, adult, male (per 1,000 male ad...   \n",
-       "2       Bangladesh                      Physicians (per 1,000 people)   \n",
-       "3       Bangladesh                                 Population, female   \n",
-       "4       Bangladesh                                   Population, male   \n",
-       "..             ...                                                ...   \n",
-       "103      Indonesia                              Mortality Rate, Total   \n",
-       "104         Mexico                              Mortality Rate, Total   \n",
-       "105        Nigeria                              Mortality Rate, Total   \n",
-       "106       Pakistan                              Mortality Rate, Total   \n",
-       "107  United States                              Mortality Rate, Total   \n",
+       "  Country Name                                     Indicator Name  \\\n",
+       "0   Bangladesh  Mortality rate, adult, female (per 1,000 femal...   \n",
        "\n",
-       "     2006-2015 AVG  \n",
-       "0     1.209193e+02  \n",
-       "1     1.590966e+02  \n",
-       "2     3.137500e-01  \n",
-       "3     7.543719e+07  \n",
-       "4     7.727287e+07  \n",
-       "..             ...  \n",
-       "103   3.672831e+02  \n",
-       "104   2.351280e+02  \n",
-       "105   7.508534e+02  \n",
-       "106   3.392261e+02  \n",
-       "107   2.134100e+02  \n",
-       "\n",
-       "[108 rows x 3 columns]"
+       "   2006-2015 AVG  \n",
+       "0     120.919333  "
       ]
      },
      "execution_count": 10,
@@ -803,7 +720,7 @@
    "source": [
     "# Combine cleaned_data_df and total_avg_mort_df ?\n",
     "cleaned_data_df = cleaned_data_df.append(total_avg_mort_df,ignore_index=True)\n",
-    "cleaned_data_df"
+    "cleaned_data_df.head(1)"
    ]
   },
   {
@@ -953,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1011,7 @@
        "[108 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,11 +1066,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Indicator Name</th>\n",
+       "      <th>2006-2015 AVG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>2.800159e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>1.054643e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>4.724580e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>3.080899e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>3.096587e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>1.685013e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>1.826766e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>6.719833e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>6.690387e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>India</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>3.860592e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>India</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>8.522518e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>India</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>3.858370e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>3.672831e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>1.207640e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>1.225493e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>2.351280e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>2.626854e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>9.308222e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>7.508534e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>9.062047e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>7.145189e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>3.392261e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>1.086349e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>6.358281e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>Mortality Rate, Total</td>\n",
+       "      <td>2.134100e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>Rural population</td>\n",
+       "      <td>5.935318e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>Urban population</td>\n",
+       "      <td>2.508867e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Country Name         Indicator Name  2006-2015 AVG\n",
+       "0       Bangladesh  Mortality Rate, Total   2.800159e+02\n",
+       "10      Bangladesh       Rural population   1.054643e+08\n",
+       "11      Bangladesh       Urban population   4.724580e+07\n",
+       "12          Brazil  Mortality Rate, Total   3.080899e+02\n",
+       "22          Brazil       Rural population   3.096587e+07\n",
+       "23          Brazil       Urban population   1.685013e+08\n",
+       "24           China  Mortality Rate, Total   1.826766e+02\n",
+       "34           China       Rural population   6.719833e+08\n",
+       "35           China       Urban population   6.690387e+08\n",
+       "36           India  Mortality Rate, Total   3.860592e+02\n",
+       "46           India       Rural population   8.522518e+08\n",
+       "47           India       Urban population   3.858370e+08\n",
+       "48       Indonesia  Mortality Rate, Total   3.672831e+02\n",
+       "58       Indonesia       Rural population   1.207640e+08\n",
+       "59       Indonesia       Urban population   1.225493e+08\n",
+       "60          Mexico  Mortality Rate, Total   2.351280e+02\n",
+       "70          Mexico       Rural population   2.626854e+07\n",
+       "71          Mexico       Urban population   9.308222e+07\n",
+       "72         Nigeria  Mortality Rate, Total   7.508534e+02\n",
+       "82         Nigeria       Rural population   9.062047e+07\n",
+       "83         Nigeria       Urban population   7.145189e+07\n",
+       "84        Pakistan  Mortality Rate, Total   3.392261e+02\n",
+       "94        Pakistan       Rural population   1.086349e+08\n",
+       "95        Pakistan       Urban population   6.358281e+07\n",
+       "96   United States  Mortality Rate, Total   2.134100e+02\n",
+       "106  United States       Rural population   5.935318e+07\n",
+       "107  United States       Urban population   2.508867e+08"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create dataframe to run visualization on"
+    "# Create dataframe to run visualization on\n",
+    "urbanization_df = final_cleaned_df.loc[(final_cleaned_df[\"Indicator Name\"] == \"Mortality Rate, Total\") |\n",
+    "(final_cleaned_df[\"Indicator Name\"] == \"Rural population\") |\n",
+    "(final_cleaned_df[\"Indicator Name\"] == \"Urban population\")\n",
+    ",:]\n",
+    "urbanization_df"
    ]
   },
   {
@@ -1166,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
