Adding analysis sections

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Proposal\n",
+    "### Proposal:\n",
     "\n",
     "- To analyze the correlation of different health and societal \n",
     "makeup measurements across the world's largest countries with mortality rates \n",
@@ -21,7 +21,11 @@
     "significant difference across the 10 largest nations between mortality rates of\n",
     "males and females. We plan to also determine and plot correlation between\n",
     "mortality rates and national obesity, physicians per 1000 people, and national\n",
-    "population size. We hypothesize that females have a lower mortality rate than males,\n",
+    "population size. \n",
+    "\n",
+    "### Hypotheses:\n",
+    "\n",
+    "- We hypothesize that females have a lower mortality rate than males,\n",
     "that obesity is strongly correlated with mortality rate, that physicians per citizens\n",
     "is strongly negatively correlated with mortality rate, and that larger nations have\n",
     "higher mortality rates."
@@ -1126,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis\n",
+    "## Data Analysis\n",
     "--------"
    ]
   },
@@ -1145,6 +1149,15 @@
    "outputs": [],
    "source": [
     "# Create bar chart with mortality rate as y-axis and each of the sexes as a bar across all nations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis\n",
+    "\n",
+    "- Here is where the analysis will be."
    ]
   },
   {
@@ -1764,9 +1777,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "#### Analysis:\n",
     "\n",
-    "- Here is where the analysis will be."
+    "Goal - To analyze the average mortality rates across the world's 10 largest countries.\n",
+    "\n",
+    "Findings- Nigera and the Russian Federation had significantly larger mortality rates than the other 8 countries, beating the next highest by over 300 and 100 deaths per 1,000 adults, respectively.\n",
+    "\n",
+    "Further Analysis- Further analysis could be done to determine if there were any significant events/diseases between 2006 and 2015 in these countries that could explain this significant difference.\n",
+    "\n",
+    "\n",
+    "-----------------"
    ]
   },
   {
@@ -1818,9 +1838,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "#### Analysis:\n",
     "\n",
-    "- Here is where the analysis will be."
+    "Goal - \n",
+    "\n",
+    "Findings- \n",
+    "\n",
+    "Further Analysis- \n",
+    "\n",
+    "-----------------"
    ]
   },
   {
@@ -1872,9 +1898,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "#### Analysis:\n",
     "\n",
-    "- Here is where the analysis will be."
+    "Goal - \n",
+    "\n",
+    "Findings- \n",
+    "\n",
+    "Further Analysis- \n",
+    "\n",
+    "-----------------"
    ]
   },
   {
@@ -1926,9 +1958,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "#### Analysis:\n",
     "\n",
-    "- Here is where the analysis will be."
+    "Goal - \n",
+    "\n",
+    "Findings- \n",
+    "\n",
+    "Further Analysis- \n",
+    "\n",
+    "-----------------"
    ]
   },
   {
@@ -1946,6 +1984,21 @@
    "outputs": [],
    "source": [
     "# Create scatterplot with mortality rate as y-axis and pysicians (per 1000 people) as the x-axis across all nations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis:\n",
+    "\n",
+    "Goal - \n",
+    "\n",
+    "Findings- \n",
+    "\n",
+    "Further Analysis- \n",
+    "\n",
+    "-----------------"
    ]
   },
   {
@@ -2585,9 +2638,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "#### Analysis:\n",
     "\n",
-    "- Here is where the analysis will be."
+    "Goal - \n",
+    "\n",
+    "Findings- \n",
+    "\n",
+    "Further Analysis- \n",
+    "\n",
+    "-----------------"
    ]
   },
   {
@@ -2636,9 +2695,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "#### Analysis:\n",
     "\n",
-    "- Here is where the analysis will be."
+    "Goal - \n",
+    "\n",
+    "Findings- \n",
+    "\n",
+    "Further Analysis- \n",
+    "\n",
+    "-----------------"
    ]
   }
  ],
