Findings neatened, ppt text added

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "### Proposal:\n",
     "\n",
-    "- To analyze the correlation of different health and societal \n",
-    "makeup measurements across the world's largest countries with mortality rates \n",
-    "to see which has the strongest impact. \n",
+    "- To analyze the relationship of different health and societal \n",
+    "factors across the world's largest countries with mortality rates \n",
+    "to see which has the strongest potential impact. \n",
     "\n",
     "- We plan to determine if there is a\n",
     "significant difference across the 10 largest nations between mortality rates of\n",
@@ -2082,9 +2082,9 @@
     "\n",
     "Findings: \n",
     "\n",
-    "- The average total mortality rate (Per 1,000 Adults) across all countries is 360.208642, the average female mortality rate (Per 1,000 Adults) was 143.598147 and the average maile mortality rate (Per 1,000 Adults) was 216.610495. This tells us that on average, the male mortality rate is higher than the female mortality rate across these countries. However, the high standard of error measurements imply that the data may be strongly varied or include outliers.\n",
+    "- The average total mortality rate (Per 1,000 Adults) across all countries is 360.208642, the average female mortality rate (Per 1,000 Adults) was 143.598147 and the average male mortality rate (Per 1,000 Adults) was 216.610495. This tells us that on average, the male mortality rate is higher than the female mortality rate across these countries. However, the high standard of error measurements imply that the data may be strongly varied or include outliers.\n",
     "\n",
-    "- The average total poplulation across these countries was 4.081664e+08 (408,166,400), with an average female population of 2.001039e+08 (200,103,900) and an average male population of 2.080625e+08 (208,062,500). This tells us that on average, these countries have a higher male population than female. However, the high standard of error measurements imply that the data may be strongly varied or include outliers.\n",
+    "- The average total population across these countries was 4.081664e+08 (408,166,400), with an average female population of 2.001039e+08 (200,103,900) and an average male population of 2.080625e+08 (208,062,500). This tells us that on average, these countries have a higher male population than female. However, the high standard of error measurements imply that the data may be strongly varied or include outliers.\n",
     "-----------------"
    ]
   },
@@ -2264,7 +2264,7 @@
     "- This graph is to visualize population distribution by country and sex.\n",
     "\n",
     "Findings:\n",
-    "- It looks as if populations are relatively evenly distributed between males and females exept in India and China.\n",
+    "- It looks as if populations are relatively evenly distributed between males and females except in India and China.\n",
     "\n",
     "Further Analysis:\n",
     "- It would be interesting to look into reasons why there is a higher male population in these two countries during these years.\n",
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2291,7 @@
     }
    ],
    "source": [
-    "# Plot bar graph of Average Mortality Rate vs Sex by Country\n",
+    "# Plot bar graph of Average Mortality Rate by Sex by Country\n",
     "x_values = sorted_gender_df[\"Country\"]\n",
     "y1_values = sorted_gender_df[\"Male Average Mortality Rate (Per 1,000 Male Adults)\"]\n",
     "y2_values = sorted_gender_df[\"Female Average Mortality Rate (Per 1,000 Female Adults)\"]\n",
@@ -2324,7 +2324,7 @@
     "- This graph is to demonstrate mortality rate of each gender in each county.\n",
     "\n",
     "Findings:\n",
-    "- Overall, the country Nigera stands out with the highest mortality regardless of gender.\n",
+    "- Overall, the country Nigeria stands out with the highest mortality regardless of gender.\n",
     "- In the Russian Federation during these years, the male mortality rate was MUCH higher than the female, indicating something may have happened during this decade that resulted in more male than female loss of life.\n",
     "- As per our earlier findings, male mortality rates are consistantly higher across the countries in our analysis.\n",
     "\n",
@@ -2332,6 +2332,11 @@
     "- It would be interesting to look into what may have happened (perhaps a war or disease) in the Russian Federation to result in these very different male vs female mortality rates.\n",
     "-----------------"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3207,7 +3212,7 @@
     "\n",
     "Findings: \n",
     "\n",
-    "- The average total mortality rate (Per 1,000 Adults) across all countries is 360.208642, the average total population was 4.081664e+08 (408,166,400), the average urban population was 1.977743e+08 (197,774,300), and the average rural population was 2.103921e+08 (210,392,100). This tells us that across these 10 nations, they have a higer average rural population than urban. However, the high standard of error measurements imply that the data may be strongly varied or include outliers.\n",
+    "- The average total mortality rate (Per 1,000 Adults) across all countries is 360.208642, the average total population was 4.081664e+08 (408,166,400), the average urban population was 1.977743e+08 (197,774,300), and the average rural population was 2.103921e+08 (210,392,100). This tells us that across these 10 nations, they have a higher average rural population than urban. However, the high standard of error measurements imply that the data may be strongly varied or include outliers.\n",
     "\n",
     "-----------------"
    ]
@@ -3256,7 +3261,7 @@
     "- To analyze the average mortality rates across the world's 10 largest countries.\n",
     "\n",
     "Findings: \n",
-    "- Nigera and the Russian Federation had significantly larger mortality rates than the other 8 countries, beating the next highest by over 300 and 100 deaths per 1,000 adults, respectively.\n",
+    "- Nigeria and the Russian Federation had significantly larger mortality rates than the other 8 countries, beating the next highest by over 300 and 100 deaths per 1,000 adults, respectively.\n",
     "\n",
     "Further Analysis:\n",
     "- Further analysis could be done to determine if there were any significant events/diseases between 2006 and 2015 in these countries that could explain this significant difference.\n",
@@ -3318,10 +3323,10 @@
     "- To analyze changes in average mortality rate by changes in average total population.\n",
     "\n",
     "Findings:\n",
-    "- With an r-value of less than .3, there is likely little to no corolation between average mortality rate and average total population. However, the lack of data between .4 and 1.2 billion citizens may be hiding a bell curve distibution. Sadly, as these are the 10 largest nations, we lack any datapoints in that range. \n",
+    "- With an r-value of less than .3, there is likely little to no correlation between average mortality rate and average total population. However, the lack of data between .4 and 1.2 billion citizens may be hiding a bell curve distribution. Sadly, as these are the 10 largest nations, we lack any datapoints in that range. \n",
     "\n",
     "Further Analysis:\n",
-    "- Further analysis could be done by adding more nations or a random selecton of nations to see if there is somehting about this dataset that makes it abnormal. However, as data is missing for a number of smaller countries, such analysis may run into its own issues.\n",
+    "- Further analysis could be done by adding more nations or a random selection of nations to see if there is something about this dataset that makes it abnormal. However, as data is missing for a number of smaller countries, such analysis may run into its own issues.\n",
     "-----------------"
    ]
   },
@@ -3380,7 +3385,7 @@
     "- To analyze changes in average mortality rate by changes in average urban population.\n",
     "\n",
     "Findings:\n",
-    "- With an r-value between -.03 and -.04 there is some corolation between average mortality rate and average urban population. However, the lack of data between 4 and 6 hundred-million citizens may be having an effect on our findings.\n",
+    "- With an r-value between -.03 and -.04 there is some correlation between average mortality rate and average urban population. However, the lack of data between 4 and 6 hundred-million citizens may be having an effect on our findings.\n",
     "\n",
     "Further Analysis:\n",
     "- Further analysis could be done by once again adding more or randomly selected nations.\n",
@@ -3442,7 +3447,7 @@
     "- To analyze changes in average mortality rate by average rural population.\n",
     "\n",
     "Findings:\n",
-    "- With an r-value of less than .3, there is likely little to no corolation between average mortality rate and average rural population. However, the lack of data between 2 and 6 hundred-million citizens may be having an effect on our findings.\n",
+    "- With an r-value of less than .3, there is likely little to no correlation between average mortality rate and average rural population. However, the lack of data between 2 and 6 hundred-million citizens may be having an effect on our findings.\n",
     "\n",
     "Further Analysis:\n",
     "- Further analysis could be done by once again adding more or randomly selected nations.\n",
@@ -4013,7 +4018,7 @@
     "\n",
     "Findings: \n",
     "\n",
-    "- The average Physicians (per 1,000 people) across all countries is 1.442502. The low standard error measurment tells us that this dataset may not be diverse enough for acurate analysis.\n",
+    "- The average Physicians (per 1,000 people) across all countries is 1.442502. The low standard error measurement tells us that this dataset may not be diverse enough for accurate analysis.\n",
     "-----------------"
    ]
   },
@@ -4072,7 +4077,7 @@
     "- To analyze changes in average mortality rate by Average Mortality Rate by Physicians (per 1,000 people)\n",
     "\n",
     "Findings:\n",
-    "- With an r-value of less than .3, there is likely little to no corolation between average mortality rate and Tate of Physicans (per 1,000 people). However, with more points on the graph, it is possible a stronger connection may emerge.\n",
+    "- With an r-value of less than .3, there is likely little to no correlation between average mortality rate and rate of physicians (per 1,000 people). However, with more points on the graph, it is possible a stronger connection may emerge.\n",
     "\n",
     "Further Analysis:\n",
     "- Further analysis could be done by once again adding more or randomly selected nations.\n",
@@ -4892,7 +4897,7 @@
     "\n",
     "- The average Prevalence of overweight (% of adults) across all countries is %38.650000. However, the high standard error measurement may imply that the prevalence is quite diverse and not similar across all nations.\n",
     "\n",
-    "- The average Prevalence of overweight, female (% of female adults) is 39.825000 and the avarage Prevalence of overweight, male (% of male adults) is %37.550000, but once again, with the high standards of error, these are likely varied across the nations.\n",
+    "- The average Prevalence of overweight, female (% of female adults) is 39.825000 and the average Prevalence of overweight, male (% of male adults) is %37.550000, but once again, with the high standards of error, these are likely varied across the nations.\n",
     "\n",
     "-----------------"
    ]
@@ -4952,7 +4957,7 @@
     "- To analyze changes in average mortality rate by Prevalence of Overweight Adults.\n",
     "\n",
     "Findings:\n",
-    "- With an r-value of less than .3, there is likely little to no corolation between average mortality rate and Prevalence of Overweight Adults. \n",
+    "- With an r-value of less than .3, there is likely little to no correlation between average mortality rate and Prevalence of Overweight Adults. \n",
     "\n",
     "\n",
     "Further Analysis: \n",
@@ -5011,7 +5016,7 @@
     "-----------------\n",
     "Goal - To analyze prevalence of overweight adults by sex by country.\n",
     "\n",
-    "Findings- There did not seem to be a strong leaning one way or the other in terms of a certain sex being more overweight across these nations. 60% had higher female rates and 40% had higher male rates, with the US having the higest overall rate. \n",
+    "Findings- There did not seem to be a strong leaning one way or the other in terms of a certain sex being more overweight across these nations. 60% had higher female rates and 40% had higher male rates, with the US having the highest overall rate. \n",
     "\n",
     "-----------------"
    ]
@@ -5037,7 +5042,7 @@
     "- We did, but there was not a significant corolation.\n",
     "5. and national\n",
     "population size. \n",
-    "- We did, but the only statistic somewhat corolated was rural population size, which had a negative corolation.\n",
+    "- We did, but the only statistic somewhat corolated was urban population size, which had a negative corolation.\n",
     "\n",
     "### Hypotheses:\n",
     "\n",
@@ -5055,21 +5060,21 @@
     "### Issues We Had:\n",
     "\n",
     "Cleaning the Data: \n",
-    "- The data was missing as not all countries gatherered all the data we were interested in each year.\n",
+    "- The data was missing as not all countries gathered all the data we were interested in each year.\n",
     "-- We solved this by collecting average rates from 2006-2015 instead and comparing those for each country.\n",
     "\n",
     "- The data was missing overall total mortality, instead breaking it down by sex. This was a key metric we needed.\n",
     "-- We caclulated these rates and added them to a dataframe and then combined the dataframes to add it to our master dataframe.\n",
     "\n",
     "- The data was not rotated the way we wanted for dataframes to run analysis on. The desired columns were listed in rows.\n",
-    "-- We solved this by creating sub-dataframes and combinign them to make sure it was rotated correctly.\n",
+    "-- We solved this by creating sub-dataframes and combining them to make sure it was rotated correctly.\n",
     "\n",
     "Intepreting Plots:\n",
     "- In the sections \"Plot Average Mortality Rate by Female Average Mortality Rate (Per 1,000 Female Adults)\" and \"Plot Average Mortality Rate by Male Average Mortality Rate (Per 1,000 Male Adults)\" we were unable to determine what the data was telling us beyond that as more males or females died, overall deats in a nation went up, which is to be expected. \n",
     "\n",
     "### Conclusion:\n",
     "\n",
-    "- Our dataset was limited to the 10 largest countries in the world. We did this because they were likely to have the data needed to run our analysis, but our findings indicate that out of the factors analyzed, only sex and rural poplulation had an impact on mortality rate in these nations, with the rural population size only being slightly corolated. This is interesting, as it seems like factors that we would expect to have a strong corolation with mortality rate worldwide, like % of population overwieght or physicians per 1,000 people do not impact these nations as much, possiblly because of somthing they all share in common. If so, this could be found via further analysis on a random selection of countries or adding more countries to the list, but the difficulty would be finding countries with the data needed to run this analysis. \n",
+    "- Our dataset was limited to the 10 largest countries in the world. We did this because they were likely to have the data needed to run our analysis, but our findings indicate that out of the factors analyzed, only sex and rural population had an impact on mortality rate in these nations, with the urban population size only being slightly correlated. This is interesting, as it seems like factors that we would expect to have a strong correlation with mortality rate worldwide, like % of population overweight or physicians per 1,000 people do not impact these nations as much, possibly because of something they all share in common. If so, this could be found via further analysis on a random selection of countries or adding more countries to the list, but the difficulty would be finding countries with the data needed to run this analysis. \n",
     "\n"
    ]
   }
